[package]
name = "mini_boltz_swap"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.7", features = ["tokio", "default_theme"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[[bin]]
name = "mini_boltz_swap"
path = "src/main.rs"

[workspace]
members = [
    "swap",
    "ui",
    "main"
]