[package]
name = "mini_boltz_swap"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["tokio",] }
reqwest  = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }


[[bin]]
name = "mini_boltz_swap"
path = "src/main.rs"
